tests/ui/comparison/src/eager_transmute.normal.stderr
error: this transmute is always evaluated eagerly, even if the condition is false
  --> tests/ui/comparison/src/eager_transmute.rs:15:33
   |
LL |     (op < 4).then_some(unsafe { std::mem::transmute::<_, Opcode>(op) })
   |                                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: `#[deny(rpl::eager_transmute)]` on by default

error: this transmute is always evaluated eagerly, even if the condition is false
  --> tests/ui/comparison/src/eager_transmute.rs:23:37
   |
LL |     check_op(op).then_some(unsafe { std::mem::transmute::<_, Opcode>(op) })
   |                                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: this transmute is always evaluated eagerly, even if the condition is false
  --> tests/ui/comparison/src/eager_transmute.rs:37:29
   |
LL |     cond.then_some(unsafe { std::mem::transmute::<_, Opcode>(op) })
   |                             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 3 previous errors

